; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_query.c_is_selected_prop.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_query.c_is_selected_prop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.view = type { %struct.property* }
%struct.property = type { %struct.property*, i32 }

@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @is_selected_prop(%struct.view* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.view*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.property*, align 8
  store %struct.view* %0, %struct.view** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load %struct.view*, %struct.view** %4, align 8
  %8 = getelementptr inbounds %struct.view, %struct.view* %7, i32 0, i32 0
  %9 = load %struct.property*, %struct.property** %8, align 8
  store %struct.property* %9, %struct.property** %6, align 8
  %10 = load %struct.property*, %struct.property** %6, align 8
  %11 = icmp ne %struct.property* %10, null
  br i1 %11, label %14, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @TRUE, align 4
  store i32 %13, i32* %3, align 4
  br label %33

14:                                               ; preds = %2
  br label %15

15:                                               ; preds = %27, %14
  %16 = load %struct.property*, %struct.property** %6, align 8
  %17 = icmp ne %struct.property* %16, null
  br i1 %17, label %18, label %31

18:                                               ; preds = %15
  %19 = load %struct.property*, %struct.property** %6, align 8
  %20 = getelementptr inbounds %struct.property, %struct.property* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @strcmpiW(i32 %21, i32* %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %27, label %25

25:                                               ; preds = %18
  %26 = load i32, i32* @TRUE, align 4
  store i32 %26, i32* %3, align 4
  br label %33

27:                                               ; preds = %18
  %28 = load %struct.property*, %struct.property** %6, align 8
  %29 = getelementptr inbounds %struct.property, %struct.property* %28, i32 0, i32 0
  %30 = load %struct.property*, %struct.property** %29, align 8
  store %struct.property* %30, %struct.property** %6, align 8
  br label %15

31:                                               ; preds = %15
  %32 = load i32, i32* @FALSE, align 4
  store i32 %32, i32* %3, align 4
  br label %33

33:                                               ; preds = %31, %25, %12
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @strcmpiW(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
